2011-11-15  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Centralize hide_symbols and ensure all libs are built with symbol visibility & bsymbolic_functions

        Reviewed by Tor Arne Vestbø.

        * Target.pri: Eliminate duplicated symbol stuff that lives now in default_post.prf.

2011-11-15  Yuqiang Xian  <yuqiang.xian@intel.com>

        Remove DFGJITCompilerInlineMethods
        https://bugs.webkit.org/show_bug.cgi?id=72366

        Reviewed by Filip Pizlo.

        Those methods are actually seldom used. Modify the few such places and
        remove DFGJITCompilerInlineMethods stuffs totally.

        * GNUmakefile.list.am:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * dfg/DFGJITCompiler.h:
        (JSC::DFG::JITCompiler::addressOfDoubleConstant):
        * dfg/DFGJITCompilerInlineMethods.h: Removed.
        * dfg/DFGSpeculativeJIT.cpp:
        * dfg/DFGSpeculativeJIT.h:
        (JSC::DFG::SpeculativeJIT::silentFillFPR):
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::fillJSValue):
        (JSC::DFG::SpeculativeJIT::cachedGetMethod):

2011-11-14  Filip Pizlo  <fpizlo@apple.com>

        DFG::SpeculativeJIT and DFG::JITCodeGenerator should be combined
        https://bugs.webkit.org/show_bug.cgi?id=72348

        Reviewed by Gavin Barraclough.
        
        Moved all of JITCodeGenerator into SpeculativeJIT.

        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * Target.pri:
        * dfg/DFGJITCodeGenerator.cpp: Removed.
        * dfg/DFGJITCodeGenerator.h: Removed.
        * dfg/DFGJITCodeGenerator32_64.cpp: Removed.
        * dfg/DFGJITCodeGenerator64.cpp: Removed.
        * dfg/DFGJITCompiler.cpp:
        * dfg/DFGRepatch.cpp:
        (JSC::DFG::generateProtoChainAccessStub):
        (JSC::DFG::tryCacheGetByID):
        (JSC::DFG::tryCachePutByID):
        * dfg/DFGSpeculativeJIT.cpp: